--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MovieDbApp</string>
+    <string name="find_a_movie">Find a movie</string>
+    <string name="search_now">Search Now</string>
 </resources>
